--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <junit.jupiter.version>5.9.1</junit.jupiter.version>
         <junit.platform.version>1.9.1</junit.platform.version>
+        <apiguardion.version>1.1.2</apiguardion.version>
         <spotless.version>2.4.1</spotless.version>
     </properties>
     <dependencies>
@@ -45,7 +46,7 @@
         <dependency>
             <groupId>org.apiguardian</groupId>
             <artifactId>apiguardian-api</artifactId>
-            <version>1.1.2</version>
+            <version>${apiguardion.version}</version>
         </dependency>
         <dependency>
             <groupId>com.diffplug.spotless</groupId>
