--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,8 @@
 
     <scm>
         <url>https://github.com/claudioaltamura/junit-failafterdate-extension</url>
-        <connection>https://github.com/claudioaltamura/junit-failafterdate-extension.git</connection>
-        <developerConnection>https://github.com/claudioaltamura/junit-failafterdate-extension.git</developerConnection>
+        <connection>scm:git:git@github.com:claudioaltamura/junit-failafterdate-extension.git</connection>
+        <developerConnection>scm:git:git@github.com:claudioaltamura/junit-failafterdate-extension.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -174,5 +174,25 @@
             </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.4.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
